css/master.css
body {
  background-color: #000;
  color: #fff;
}

img {
  display: block;
}

.sample {
  width: 100%;
  margin: 7em auto;
}

#ghost {
  margin: 20vh auto;
  animation: bounce 1s infinite alternate;
  -webkit-animation: bounce 1s infinite alternate;
}

#git {
  margin: auto;
}

@keyframes bounce {
  from {
    transform: translateY(0px);
  }
  to {
    transform: translateY(-15px);
  }
}

@-webkit-keyframes bounce {
  from {
    transform: translateY(0px);
  }
  to {
    transform: translateY(-15px);
  }
}

